# peribus

./: .gitignore  LICENSE  README.md  pre.txt  pyproject.toml  requirements.txt  requirements_apps.txt  start.py
apps/: README.md  car_game_gl.py  cfdlab.py  chemlab.py  circuit_lab.py  druglab.py  file_explorer.py  genom_lab.py  material_lab.py  neurolab.py  quantview.py  supermap.py  supersheet.py
core/: __init__.py  files.py  types.py
demos/: 3d_molecular_dynamics.py  car_game_3d.py  car_game_3d_2.py  file_explorer.py  floor_plan_3js.py  lyria.py
llmfs/: __init__.py  agent.py  av_agent.py  av_grok_agent.py  av_openai_agent.py  filesystem.py  main.py  media.py  providers.py  ts_agent.py
ninep/: __init__.py  client.py  codec.py  protocol.py  server.py
rio/: __init__.py  ai_voice_control.py  context_file.py  filesystem.py  immersive_mode.py  main.py  onboarding.py  operator_panel.py  parser.py  scene.py  shell_sandbox.py  terminal_widget.py  version_panel.py
rio/acme/: __init__.py  acme_clean.py  acme_column.py  acme_core.py  acme_fs.py  acme_window.py  content_detector.py  program_generators.py
riomux/: __init__.py  __main__.py  backend.py  mux.py  server.py  wire.py
systems/: acme.md  audiovisual.md  audiovisual_master.md  coder.md  coder_ts.md  master.md
